Opened 15 years ago

Closed 15 years ago

#757 closed defect (fixed)

ffplay h263: crash with lowres while seeking (regression)

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: unspecified Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

to reproduce please run:

ffplay -lowres 3 QT-H263.mov

and seek a few times with the mouse

index 9ab52ef..6893a3a 100644

--- a/libavcodec/mpegvideo.c
+++ b/libavcodec/mpegvideo.c
@@ -1134,7 +1134,7 @@ int MPV_frame_start(MpegEncContext *s, AVCodecContext *avctx)
             if(ff_alloc_picture(s, s->last_picture_ptr, 0) < 0)
                 return -1;
 
-            if(s->codec_id == CODEC_ID_FLV1){
+            if(s->codec_id == CODEC_ID_FLV1 || s->codec_id == CODEC_ID_H263){
                 for(i=0; i<s->height; i++)
                     memset(s->last_picture_ptr->f.data[0] + s->last_picture_ptr->f.linesize[0]*i, 16, s->width);
             }

Attachments (1)

QT-H263.mov (658.7 KB ) - added by ami_stuff 15 years ago.

Download all attachments as: .zip

Change History (2)

by ami_stuff, 15 years ago

Attachment: QT-H263.mov added

comment:1 by Michael Niedermayer, 15 years ago

Component: undeterminedavcodec
Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.