h263dec: Fix regression / crash with lowres. Fixes Ticket757 Bug Found by: ami_stuff

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 21270cffaeab2f67a613907516b2b0cd6c9eacf4)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>